# High-Resolution-Image-Reconstruction

./: README.txt
doc/: index.html
source/: build_all.sh
source/QHRIR_AI_demo/: QHRIR_AI_demo.pro  QHRIR_AI_demo.supp  datamap.hpp  globalpropertieswrapper.h  globalsettingsdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mutationsettings.h  propertymanager.cpp  propertymanager.h  propertymanagerfactory.cpp  propertymanagerfactory.h  propertytreeview.cpp  propertytreeview.h  runpropertieswrapper.h  smarthrir.cpp  smarthrir.h  stringconverter.cpp  stringconverter.h
source/ai_evol/: CMakeLists.txt  PRO_EVOL  config.h.in
source/ai_evol/docs/: Doxyfile.cmake
source/ai_evol/header/: ai_evol.h
source/ai_evol/source/: ai_evol.c  list.c  priority_queue.c
source/debug_util/: CMakeLists.txt  PRO_C_DEBUG  config.h.in
source/debug_util/docs/: Doxyfile.cmake
source/debug_util/header/: debug.h  debug_utilconfig.h
source/debug_util/source/: .debug.c.swp  debug.c
source/hrir/: CMakeLists.txt  PRO_HRIR  config.h.in
source/hrir/docs/: Doxyfile.cmake
source/hrir/header/: haar_transformation.h  hrirconfig.h  median_filter.h  non_maxima.h  percent_calculator.h
source/hrir/source/: dumper.c  gaussian_filter.c  haar_transformation.c  image_amplifier.c  image_filter.c  image_reconstruct.c  median_filter.c  non_maxima.c  percent_calculator.c
source/libs/docs/ai_evol/: ai_evol.tag
source/libs/docs/debug_util/: debug_util.tag
source/libs/docs/hrir/: hrir.tag
source/shrir/: CMakeLists.txt  PRO_SHRIR  config.h.in
source/shrir/docs/: Doxyfile.cmake
source/shrir/header/: compile_uti.h  hrir_ai.h  smart_hrir.h
source/shrir/source/: hrir_ai.c  hrir_mutations.c  smart_hrir.c
(+326 files in other folders)
